# sshbool

./: .gitignore  AGENTS.md  README.md  docker-compose.test.yml  eslint.config.mjs  index.html  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  security.yml
docs/: 00-vision-and-strategy.md  01-architecture.md  02-folder-structure.md  03-tech-stack-and-decisions.md  04-database-schema.md  05-rust-backend-architecture.md  06-react-frontend-architecture.md  07-tauri-commands-and-api-contracts.md  08-design-system.md  09-screens-wireframes-dialogs.md  21-plugin-sdk.md  22-security.md  23-performance-and-memory.md  24-testing-and-cicd.md  25-deployment-and-autoupdate.md  26-roadmap.md  27-monetization-and-licensing.md  28-future-features.md  99-glossary-and-conventions.md  README.md  project_summary.md  security-review-checklist.md
docs/features/: 10-ssh-connections.md  11-sftp.md  12-terminal.md  13-remote-editor.md  14-dashboard.md  15-docker-kubernetes.md  16-databases.md  17-dev-tools.md  18-key-manager.md  19-sync-backup.md  20-ai-assistant.md  21-productivity.md
scripts/: gen-ipc-types.mjs
services/sync-relay/: Cargo.toml  README.md
services/sync-relay/src/: main.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/application/: Cargo.toml
src-tauri/crates/application/src/: dto.rs  lib.rs
src-tauri/crates/domain/: Cargo.toml
src-tauri/crates/domain/src/: connections.rs  error.rs  ids.rs  lib.rs  vault.rs
src-tauri/crates/infrastructure/: Cargo.toml
src-tauri/crates/infrastructure/src/: crypto.rs  db.rs  lib.rs  state.rs  vault.rs
src-tauri/crates/infrastructure/src/ssh/: manager.rs  mod.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_vault.sql  0003_sessions.sql  0004_transfers.sql  0005_monitoring.sql  0006_containers.sql  0007_datastores.sql  0008_knowledge.sql  0009_ai.sql  0010_sync.sql  0011_plugins.sql  0012_fts.sql  0013_audit.sql  0014_licensing.sql  0015_team.sql  0016_host_icon.sql
src-tauri/src/: container.rs  error.rs  events.rs  lib.rs  main.rs
src-tauri/src/commands/: hosts.rs  license.rs  mod.rs  monitoring.rs  phase2.rs  phase3.rs  productivity.rs  sessions.rs  team.rs  transfers.rs  vault.rs
src/app/: providers.tsx
src/components/: theme-provider.tsx
src/components/command-palette/: command-palette.tsx
src/components/layout/: activity-bar.tsx  app-shell.tsx  context-sidebar.tsx  host-rail.tsx  pane-grid.tsx  primary-sidebar.tsx  status-bar.tsx  tab-bar.tsx  title-bar.tsx  window-chrome.tsx  window-tab.tsx
src/components/ui/: button.tsx  toaster.tsx
src/features/ai/components/: ai-panel.tsx
src/features/audit/components/: audit-panel.tsx
src/features/connections/: connect-host.ts  host-appearance.ts
src/features/connections/components/: add-host-form.tsx  host-tile.tsx  host-tree.tsx
src/features/dashboard/components/: dashboard-panel.tsx
src/features/databases/: open-er-diagram-popout.ts  parse-er-diagram-popout.ts
src/features/databases/components/: databases-panel.tsx  db-add-connection-form.tsx  db-browse-workspace.tsx  db-er-diagram.tsx  db-result-grid.tsx  db-schema-tree.tsx  db-sql-workspace.tsx  er-diagram-popout-window.tsx
src/features/databases/lib/: db-engine-colors.ts
src/features/devtools/components/: devtools-panel.tsx
src/features/editor/: open-editor-popout.ts  parse-editor-popout.ts
src/features/home/: home-overview.tsx
src/features/terminal/: arabic-xterm.test.ts  arabic-xterm.ts  open-terminal-popout.ts  parse-terminal-popout.ts  terminal-scrollback.ts  terminal-theme.ts
src/hooks/: use-event.ts  use-taskbar-transfer-progress.ts  use-transfer-close-guard.ts  use-transfers-sync.ts
src/lib/: license-gate.test.ts  utils.ts
src/lib/ipc/: commands.ts  types.ts
src/lib/schemas/: ipc-types.snapshot.ts
src/stores/: connection.store.ts  editor.store.ts  layout.store.ts  session.store.ts  sftp-activity.store.ts  toast.store.ts  vault.store.ts
src/styles/: globals.css
src/test/: smoke.test.ts
src/types/: arabic-persian-reshaper.d.ts
(+29 files in other folders)
