[package]
name = "sync-relay"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "sync-relay"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v7"] }
