[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
